[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/end-circle.png" type="Texture" id=1]
[ext_resource path="res://scenes/end-screen/ChoiceCircle.gd" type="Script" id=2]
[ext_resource path="res://fonts/open-sans/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/end-screen/HoverControl.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[node name="ChoiceCircle" type="Control"]
margin_left = 500.0
margin_top = 500.0
margin_right = 650.0
margin_bottom = 700.0
rect_min_size = Vector2( 150, 200 )
rect_rotation = -0.0875701
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 150, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceLabel" type="Label" parent="VBoxContainer"]
margin_right = 150.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
text = "Choix"
align = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 150.0
margin_bottom = 168.0
mouse_default_cursor_shape = 2
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DilemmaLabel" type="Label" parent="VBoxContainer"]
margin_top = 172.0
margin_right = 150.0
margin_bottom = 200.0
custom_fonts/font = SubResource( 1 )
text = "Dilemme"
align = 1

[node name="Tween" type="Tween" parent="."]

[node name="HoverControl" parent="." instance=ExtResource( 4 )]
